# Project_Homework

./: .coverage  .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
htmlcov/: index.html
src/: csv_xlsx_readers.py  decorators.py  external_api.py  generators.py  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  test.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
